...
        android:orientation="vertical"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/banner"
            android:src="@drawable/banner"
            android:layout_width="match_parent"
            android:layout_height="135dp"/>


    </LinearLayout>
...
