...
        android:layout_width="150dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/logo"
            android:id="@+id/imgProduct"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

    </LinearLayout>

    <LinearLayout
...
            android:layout_marginTop="24dp"
            android:text="Price"
            android:textSize="20sp"
            android:layout_marginLeft="20dp" />

        <Button
            android:id="@+id/btnUpdate"
            android:text="Update"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
...
