<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.AddProductFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>
    </LinearLayout>

    <TextView
        android:text="Add Product"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etxtPname"
            android:layout_marginTop="15dp"
            android:hint="Product Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etxtPdec"
            android:layout_marginTop="15dp"
            android:hint="Product Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etxtPrice"
            android:layout_marginTop="15dp"
            android:hint="Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Spinner
            android:layout_marginTop="15dp"
            android:id="@+id/spnProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_marginTop="15dp"
            android:src="@drawable/upload"
            android:layout_width="match_parent"
            android:layout_height="150dp"/>
        <Button
            android:id="@+id/btnSave"
            android:layout_marginTop="15dp"
            android:text="Save Product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
    </ScrollView>

</LinearLayout>